# ChronOS

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  build.bat  build.sh  imgui.ini  test_output.oif
assets/: boot.txt
scripts/: convertToImage.py
src/: CMakeLists.txt  image.cpp  image.hpp  main.cpp  os_window.cpp  os_window.hpp  renderable.hpp
src/window/: CMakeLists.txt  desktop_background.cpp  desktop_background.hpp  mail.cpp  mail.hpp  power_manager.cpp  power_manager.hpp  task_manager.cpp  task_manager.hpp  taskbar.cpp  taskbar.hpp  window.cpp  window.hpp
